created Tile class and Gameboard class, listeners added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <title>Visualizer_Sight_and_Obstacles</title>
   </head>
   <body>
-    <div class="controls-container"></div>
     <section class="section-game">
+      <div class="controls-container">
+        <button type="button" class="button button-light" data-id="light">
+          <div class="icon icon-light" data-id="icon-light"></div>
+          LIGHT
+        </button>
+        <button type="button" class="button button-wall" data-id="wall">
+          <div class="icon icon-wall" data-id="icon-all"></div>
+          WALL
+        </button>
+      </div>
       <div class="plane-container">
         <div class="plane"></div>
       </div>
