buttons and cursor behavior.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
           LIGHT
         </button>
         <button type="button" class="button button-wall" data-id="wall">
-          <div class="icon icon-wall" data-id="icon-all"></div>
+          <div class="icon icon-wall" data-id="icon-wall"></div>
           WALL
         </button>
+        <button type="button" class="button button-clear" data-id="clear">
+            <div class="icon icon-clear" data-id="icon-clear"></div>
+            CLEAR
+          </button>
       </div>
       <div class="plane-container">
         <div class="plane"></div>
