fixed event listeners, created class ControlsPanel and controls moved there

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="controls-container">
         <button type="button" class="button button-light" data-id="light">
           <div class="icon icon-light" data-id="icon-light"></div>
-          LIGHT
+          light
         </button>
         <button type="button" class="button button-wall" data-id="wall">
           <div class="icon icon-wall" data-id="icon-wall"></div>
